--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>view2</title>
+    <title>Vetter Animal Online Booking</title>
     <style>
     body {
       font-family: 'Avenir', Helvetica, Arial, sans-serif;
